fix: update app

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -12,7 +12,9 @@
     content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova || htmlWebpackPlugin.options.ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
   <!-- Hide Chrome translation popup on tablet/phone due to different locale, lang attr update isn't fast enough; Disables also google-translate for webpages!-->
   <meta name="google" value="notranslate">
+
   <title><%= htmlWebpackPlugin.options.productName %></title>
+  <meta name="description" content="<%= htmlWebpackPlugin.options.productDescription %>">
 
   <link rel="icon" type="image/png" href="statics/app-logo-128x128.png">
   <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png">
@@ -21,7 +23,7 @@
   <link rel="icon" type="image/ico" href="statics/icons/favicon.ico">
 </head>
 
-<body class="non-selectable">
+<body class="non-selectable-alias">
   <% if (!htmlWebpackPlugin.options.ctx.mode.electron) { %>
   <noscript>
     <div
