Move electron splash

--- a/src-electron/main-process/statics/electron-splash.html
+++ b/src-electron/main-process/statics/electron-splash.html
@@ -10,7 +10,7 @@
 
 <body>
   <div>
-    <img src="hyperion-logo-white.png" alt="Hyperion Logo">
+    <img src="statics/hyperion-logo-white.png" alt="Hyperion Logo">
   </div>
 </body>
 
